--- a/index.html
+++ b/index.html
@@ -1,9 +1,151 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>The Lazy Fox</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="/css/default.css" rel="stylesheet" media="screen">
 </head>
 <body>
-    <p>Coming soon... the lazy fox website</p>
+<nav class="navbar-wrapper navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Vacation Rentals</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-star"></span> Top Destinations</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> About Us<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Company Details</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-asterisk"></span> Book Tickets</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-info-sign"></span> Reservation<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Cancel</a></li>
+                        <li><a href="#">Confirm</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+</nav>
+<!-- @todo why does this need styling -->
+<div class="container" style="margin-top:50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top:50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top:50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top:50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top:50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top:50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">&copy; 2013</div>
+            <div class="col-md-4">
+                <ul class="nav nav-pills">
+                    <li class="active"><a href="#">About Us</a></li>
+                    <li><a href="#">Support 24x7</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h3 class="text-right">Vacation Rentals</h3>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
