re creation of new header

--- a/index.html
+++ b/index.html
@@ -3,125 +3,121 @@
 <head>
     <title>The Lazy Fox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald:bold,light,regular">
     <!-- Bootstrap -->
     <link href="/css/default.css" rel="stylesheet" media="screen">
 </head>
 <body>
-<nav class="navbar-wrapper navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Vacation Rentals</a>
-        </div>
+<div id="home">
+    <nav class="navbar navbar-wrapper navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">the lazy fox</a>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-star"></span> Top Destinations</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> About Us<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Company Details</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-asterisk"></span> Book Tickets</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-info-sign"></span> Reservation<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Cancel</a></li>
-                        <li><a href="#">Confirm</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div>
-</nav>
-<!-- @todo why does this need styling -->
-<div class="container" style="margin-top:50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="divider-vertical"></li>
+                    <li><a href="/illustration/"> Illustration </a></li>
+                    <li class="divider-vertical"></li>
+                    <li><a href="/web/"> Web </a>
+                    <li class="divider-vertical"></li>
+                    <li><a href="/design/"> Design </a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">CV</a></li>
+                    <li class="divider-vertical"></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
         </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+    </nav>
+    <!-- @todo why does this need styling -->
+    <div class="container" style="margin-top:50px;">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
         </div>
     </div>
-</div>
-<div class="container" style="margin-top:50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-    </div>
-</div>
-<div class="container" style="margin-top:50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+    <div class="container" style="margin-top:50px;">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
         </div>
     </div>
-</div>
-<div class="container" style="margin-top:50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-    </div>
-</div>
-<div class="container" style="margin-top:50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
-        </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+    <div class="container" style="margin-top:50px;">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
         </div>
     </div>
-</div>
-<div class="container" style="margin-top:50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+    <div class="container" style="margin-top:50px;">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
         </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+    </div>
+    <div class="container" style="margin-top:50px;">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
         </div>
-        <div class="col-md-4">
-            <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+    </div>
+    <div class="container" style="margin-top:50px;">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
+            <div class="col-md-4">
+                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            </div>
         </div>
     </div>
 </div>
