--- a/index.html
+++ b/index.html
@@ -41,82 +41,66 @@
             </div><!-- /.navbar-collapse -->
         </div>
     </nav>
-    <!-- @todo why does this need styling -->
-    <div class="container" style="margin-top:50px;">
+    <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-        </div>
-    </div>
-    <div class="container" style="margin-top:50px;">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-        </div>
-    </div>
-    <div class="container" style="margin-top:50px;">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-        </div>
-    </div>
-    <div class="container" style="margin-top:50px;">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-        </div>
-    </div>
-    <div class="container" style="margin-top:50px;">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-        </div>
-    </div>
-    <div class="container" style="margin-top:50px;">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
-            <div class="col-md-4">
-                <a href="#"><img class="img-responsive" src="images/palmtrees.jpg"></a>
+            <div class="col-md-4 col-sm-6">
+                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
             </div>
         </div>
     </div>
