re creation of contact us page and tie into navigation

--- a/contact/index.html
+++ b/contact/index.html
@@ -43,67 +43,7 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="#"><img class="img-responsive" src="/images/palmtrees.jpg"></a>
-            </div>
-        </div>
+            Contact form coming soon
     </div>
 </div>
 <footer>
