--- a/web/project.html
+++ b/web/project.html
@@ -39,7 +39,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">CV</a></li>
                         <li class="divider-vertical"></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
