--- a/contact/index.html
+++ b/contact/index.html
@@ -43,7 +43,35 @@
         </div>
     </nav>
     <div class="container">
-            Contact form coming soon
+        <div class="row">
+            <div class="col-xs-12">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" rows="10" id="message">say something!</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="upload">File input</label>
+                        <input type="file" id="upload">
+                        <p class="help-block">Example block-level help text here.</p>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 <footer>
